--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,18 @@
+appdirs==1.4.4
 click==7.1.2
+distlib==0.3.1
+dnspython==2.1.0
+email-validator==1.1.2
+filelock==3.0.12
 Flask==1.1.2
+Flask-WTF==0.14.3
+idna==3.1
 itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
+mysql-connector==2.2.9
+pymongo==3.11.3
+six==1.15.0
+virtualenv==20.4.2
 Werkzeug==1.0.1
+WTForms==2.3.3
